<resources>
    <string name="app_name">Car performance simulator</string>
    <string name="label_throttle">Throttle</string>
    <string name="label_brake">Brake</string>
    <string name="label_upshift">+</string>
    <string name="label_downshift">-</string>
    <string name="label_basic_car_data">Basic car data</string>
    <string name="hint_name">Name</string>
    <string name="hint_weight">Weight [kg]</string>
    <string name="hint_drag_coeff">Drag coefficient</string>
    <string name="hint_front_area" formatted="false">Front area [m<sup><small>2</small></sup>]</string>
    <string name="hint_tire_pressure">Tire pressure [bar]</string>
    <string name="hint_brake_force">Brake force [N]</string>
    <string name="label_transmission">Transmission</string>
    <string name="hint_gear_change_duration">Gear change duration [millis]</string>
    <string name="hint_gear_number">Gear number</string>
    <string name="label_gear">Gear</string>
    <string name="hint_speed_in_gear">Speed [km/h]</string>
    <string name="hint_rpm_at_speed">RPM at speed</string>
    <string name="content_description_add_gear">Add gear</string>
    <string name="content_description_remove_gear">Remove gear</string>
    <string name="label_gears">Gears</string>
    <string name="label_engine">Engine</string>
    <string name="hint_max_rpm">Max RPM</string>
    <string name="hint_idle_rpm">Idle RPM</string>
    <string name="hint_compression_energy">Compression energy [J/rot]</string>
    <string name="label_power">Power on drive wheels</string>
    <string name="hint_rpm">RPM</string>
    <string name="hint_power_at_rpm">Power at RPM [kw]</string>
    <string name="menu_item_apply_changes">Apply</string>
    <string name="label_power_unit">kw</string>
    <string name="label_torque_unit">Nm</string>
    <string name="label_acceleration_unit">m/s<sup><small>2</small></sup></string>
    <string name="label_roll_resistance_unit">N</string>
    <string name="label_air_resistance_unit">N</string>
    <string name="label_roll_resistance_power_unit">kw</string>
    <string name="label_acceleration_power_unit">kw</string>
    <string name="label_air_resistance_power_unit">kw</string>
    <string name="label_car_settings">Car settings</string>
    <string name="switch_text_display_state">Display state</string>
    <string name="label_simulation_car">Simulation car:</string>
    <string name="title_simulation_car_settings">Simulation car settings</string>
    <string name="item_custom_car_model">[Custom] %s</string>
    <string name="menu_item_cars">Cars</string>
    <string name="title_cars">Cars</string>
    <string name="label_max_power">Max power:</string>
    <string name="label_max_power_unit">kw</string>
    <string name="label_rated_speed_unit">RPM</string>
    <string name="label_rated_speed">Rated speed:</string>
    <string name="label_weight">"Weight:"</string>
    <string name="label_gears_count">Gears:</string>
    <string name="label_weight_unit">kg</string>
    <string name="menu_item_save_car">Save</string>
    <string name="message_save_failed_invalid_car_details">Could not save car data since some fields are missing or contain an invalid value. Fill in all fields with correct values and try again.</string>
    <string name="title_save_car_failed">Save failed</string>
    <string name="dialog_button_ok">OK</string>
    <string name="message_apply_changes_failed_invalid_car_details">Could not apply changes since some fields are missing or contain an invalid value. Fill in all fields with correct values and try again.</string>
    <string name="title_apply_changes_failed">Applying changes failed</string>
    <string name="title_edit_car">Edit car</string>
    <string name="title_new_car">New car</string>
    <string name="content_description_remove_car">Remove car</string>
    <string name="label_speed_display">Speed display</string>
    <string name="label_rpm_display">RPM display</string>
    <string name="hint_max_speedometer_speed">Max speedometer speed</string>
    <string name="hint_speedometer_segments_count">Speedometer segments number</string>
    <string name="hint_speedometer_labeled_marks_step">Speedometer labeled marks step</string>
    <string name="hint_max_rpm_meter_value">Max RPM meter value</string>
    <string name="hint_rpm_meter_segments_count">RPM meter segments number</string>
    <string name="hint_rpm_meter_labeled_marks_step">RPM meter labeled marks step</string>
    <string name="hint_rpm_meter_critical_rpm_threshold">Critical RPM threshold</string>
    <string name="hint_rpm_meter_value_label_multiplicator">RPM meter value label multiplicator</string>
    <string name="message_no_cars">There are no any saved cars. Add at least one car to start a simulation.</string>
    <string name="label_add_car">Add car</string>
    <string name="label_speed">Speed:</string>
    <string name="label_speed_unit">km/h</string>
    <string name="label_rpm">RPM:</string>
    <string name="label_current_gear">Gear:</string>
    <string name="label_total_distance">Distance:</string>
    <string name="label_total_distance_unit">m</string>
    <string name="label_current_power">Power:</string>
    <string name="label_power_values_separator">/</string>
    <string name="label_torque">Torque:</string>
    <string name="label_torque_values_separator">/</string>
    <string name="label_kinetic_energy">Kinetic energy:</string>
    <string name="label_kinetic_energy_unit">J</string>
    <string name="label_produced_energy">Produced energy:</string>
    <string name="label_produced_energy_unit">J</string>
    <string name="label_acceleration">Acceleration:</string>
    <string name="label_roll_resistance">Roll resistance:</string>
    <string name="label_air_resistance">Air resistance:</string>
    <string name="label_roll_resistance_power">Roll resistance power:</string>
    <string name="label_air_resistance_power">Air resistance power:</string>
    <string name="label_acceleration_power">Acceleration power:</string>
</resources>
