<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

    <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ferrari 488 GTB" />


    <TextView
            android:id="@+id/text_max_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_max_power"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name" />

    <TextView
            android:id="@+id/text_max_power_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/text_max_power"
            app:layout_constraintTop_toTopOf="@id/text_max_power"
            tools:text="456" />

    <TextView
            android:id="@+id/text_max_power_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/label_max_power_unit"
            app:layout_constraintStart_toEndOf="@id/text_max_power_value"
            app:layout_constraintTop_toTopOf="@id/text_max_power" />


    <TextView
            android:id="@+id/text_rated_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rated_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_max_power" />

    <TextView
            android:id="@+id/text_rated_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/text_rated_speed"
            app:layout_constraintTop_toTopOf="@id/text_rated_speed"
            tools:text="5555" />

    <TextView
            android:id="@+id/text_rated_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/label_rated_speed_unit"
            app:layout_constraintStart_toEndOf="@id/text_rated_speed_value"
            app:layout_constraintTop_toTopOf="@id/text_rated_speed" />


    <TextView
            android:id="@+id/text_gears_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gears_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_rated_speed" />

    <TextView
            android:id="@+id/text_gears_count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/text_gears_count"
            app:layout_constraintTop_toTopOf="@id/text_gears_count"
            tools:text="6" />


    <TextView
            android:id="@+id/text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_gears_count" />

    <TextView
            android:id="@+id/text_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/text_weight"
            app:layout_constraintTop_toTopOf="@id/text_weight"
            tools:text="1234" />

    <TextView
            android:id="@+id/text_weight_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/label_weight_unit"
            app:layout_constraintStart_toEndOf="@id/text_weight_value"
            app:layout_constraintTop_toTopOf="@id/text_weight_value" />

    <ImageButton
            android:id="@+id/button_remove"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/content_description_remove_car"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>