<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_car_details_card_view">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_car_details_card_view_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_car_details_card_view_title"
                    android:text="@string/label_speed_display"
                    android:textSize="@dimen/text_size_car_details_card_view_title"
                    android:textStyle="bold" />

            <hr.alenmagdic.carperformancesimulator.app.ui.view.SpeedometerView
                    android:id="@+id/speedometer_preview"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_max_speedometer_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_max_speedometer_speed"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_speedometer_segments_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_speedometer_segments_count"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_speedometer_labeled_marks_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_speedometer_labeled_marks_step"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_car_details_card_view">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_car_details_card_view_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_car_details_card_view_title"
                    android:text="@string/label_rpm_display"
                    android:textSize="@dimen/text_size_car_details_card_view_title"
                    android:textStyle="bold" />

            <hr.alenmagdic.carperformancesimulator.app.ui.view.RpmMeterView
                    android:id="@+id/rpm_meter_preview"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_max_rpm_meter_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_max_rpm_meter_value"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_rpm_meter_segments_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_rpm_meter_segments_count"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_rpm_meter_labeled_marks_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_rpm_meter_labeled_marks_step"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_rpm_meter_critical_rpm_threshold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_rpm_meter_critical_rpm_threshold"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_rpm_meter_value_label_multiplicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_rpm_meter_value_label_multiplicator"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>