<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        tools:context=".ui.activity.SimulationCarSettingsActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/card_basic_car_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_car_details_card_view_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/label_basic_car_data"
                    android:textSize="@dimen/text_size_car_details_card_view_title"
                    android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_weight"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_drag_coeff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_drag_coeff"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_front_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_front_area"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_tire_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_tire_pressure"
                        android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_brake_force"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_brake_force"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_car_transmission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_car_details_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_basic_car_data">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_car_details_card_view_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_car_details_card_view_title"
                    android:text="@string/label_transmission"
                    android:textSize="@dimen/text_size_car_details_card_view_title"
                    android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_gear_change_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_gear_change_duration"
                        android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_gears"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_gear_sizes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_gear_size" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_remove_gear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="16dp"
                        android:backgroundTint="#525252"
                        android:contentDescription="@string/content_description_remove_gear"
                        android:src="@android:drawable/ic_delete"
                        app:borderWidth="0dp"
                        app:fabSize="mini" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_add_gear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="16dp"
                        android:backgroundTint="#525252"
                        android:contentDescription="@string/content_description_add_gear"
                        android:src="@android:drawable/ic_input_add"
                        app:borderWidth="0dp"
                        app:fabSize="mini" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_car_engine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_car_details_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_car_transmission">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_car_details_card_view_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_car_details_card_view_title"
                    android:text="@string/label_engine"
                    android:textSize="@dimen/text_size_car_details_card_view_title"
                    android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_max_rpm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_max_rpm"
                        android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_idle_rpm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_idle_rpm"
                        android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_compression_energy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_compression_energy"
                        android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_power"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_power_at_rpm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_power_at_rpm" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_remove_power_at_rpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="16dp"
                        android:backgroundTint="#525252"
                        android:contentDescription="@string/content_description_remove_gear"
                        android:src="@android:drawable/ic_delete"
                        app:borderWidth="0dp"
                        app:fabSize="mini" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_add_power_at_rpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_margin="16dp"
                        android:backgroundTint="#525252"
                        android:contentDescription="@string/content_description_add_gear"
                        android:src="@android:drawable/ic_input_add"
                        app:borderWidth="0dp"
                        app:fabSize="mini" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include
            layout="@layout/layout_car_speed_and_rpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_car_engine" />

</androidx.constraintlayout.widget.ConstraintLayout>


